// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo service import "frodo service import --all --global --file test/e2e/exports/all/allGlobalServices.service.json": should import all global services from the file "test/e2e/exports/all/allGlobalServices.service.json" 1`] = `""`;

exports[`frodo service import "frodo service import --clean --global --all --file test/e2e/exports/all/allGlobalServices.service.json": should fail because global singleton services cannot be deleted (--clean option). 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
Error importing services
  Error putting global full service configs
  Error putting global full service config CorsService
  Error deleting service 'CorsService' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
  Error putting global full service config dashboard
  Error deleting service 'dashboard' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
"
`;

exports[`frodo service import "frodo service import --clean --global --all-separate --directory test/e2e/exports/all-separate/cloud/global/service": should import all global services from the directory "test/e2e/exports/all-separate/cloud/global/service", and clean the old ones 1`] = `""`;

exports[`frodo service import "frodo service import --clean --global --file test/e2e/exports/all/allGlobalServices.service.json": should fail because global singleton services cannot be deleted (--clean option). 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
- Importing test/e2e/exports/all/allGlobalServices.service.json...
✖ Error importing first service
Error importing service CorsService
  Error putting global full service config CorsService
  Error deleting service 'CorsService' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
"
`;

exports[`frodo service import "frodo service import --clean -g --service-id dashboard --file test/e2e/exports/all/allGlobalServices.service.json": should fail because global singleton services cannot be deleted (--clean option). 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
- Importing dashboard from test/e2e/exports/all/allGlobalServices.service.json...
✖ Error importing dashboard.
Error importing service dashboard
  Error putting global full service config dashboard
  Error deleting service 'dashboard' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
"
`;

exports[`frodo service import "frodo service import --current-realm -Caf test/e2e/exports/all/allAlphaServices.service.json": should import all services from the file "test/e2e/exports/all/allAlphaServices.service.json", and clean the old ones 1`] = `""`;

exports[`frodo service import "frodo service import --global --all-separate --directory test/e2e/exports/all-separate/cloud/global/service": should import all global services from the directory "test/e2e/exports/all-separate/cloud/global/service" 1`] = `""`;

exports[`frodo service import "frodo service import --global --file test/e2e/exports/all/allGlobalServices.service.json": should import the first global service from the file "test/e2e/exports/all/allGlobalServices.service.json" 1`] = `""`;

exports[`frodo service import "frodo service import --service-id dashboard --global --file test/e2e/exports/all/allGlobalServices.service.json": should import the global service with the id "CorsService" from the file "test/e2e/exports/all/allGlobalServices.service.json" 1`] = `""`;

exports[`frodo service import "frodo service import -ACrD test/e2e/exports/all-separate/cloud/realm/root-alpha/service": should import all services from the directory "test/e2e/exports/all-separate/cloud/realm/root-alpha/service", and clean the old ones 1`] = `""`;

exports[`frodo service import "frodo service import -AD test/e2e/exports/all-separate/cloud/realm/root-alpha/service": should import all services from the directory "test/e2e/exports/all-separate/cloud/realm/root-alpha/service" 1`] = `""`;

exports[`frodo service import "frodo service import -Crf test/e2e/exports/all/allAlphaServices.service.json": should import the first service from the file "test/e2e/exports/all/allAlphaServices.service.json", and clean the old one 1`] = `""`;

exports[`frodo service import "frodo service import -Cri baseurl -f test/e2e/exports/all/allAlphaServices.service.json": should import the service with the id "baseurl" from the file "test/e2e/exports/all/allAlphaServices.service.json", and clean the old one 1`] = `""`;

exports[`frodo service import "frodo service import -af test/e2e/exports/all/allAlphaServices.service.json": should import all services from the file "test/e2e/exports/all/allAlphaServices.service.json" 1`] = `""`;

exports[`frodo service import "frodo service import -f test/e2e/exports/all/allAlphaServices.service.json": should import the first service from the file "test/e2e/exports/all/allAlphaServices.service.json" 1`] = `""`;

exports[`frodo service import "frodo service import -i SocialIdentityProviders -f test/e2e/exports/all/allAlphaServices.service.json": should import the service with the id "SocialIdentityProviders" from the file "test/e2e/exports/all/allAlphaServices.service.json" 1`] = `""`;
